# ACSC

./: LICENSE  README-CN.md  README.md  calibration.py  camera_intrinsic.py  projection_validation.py  rigid_trans.py  temporal_stack.py  utils.py
configs/: data_collection.yaml  sample.yaml
ros/livox_calibration_ws/src/calibration_data_collection/: CMakeLists.txt  package.xml
ros/livox_calibration_ws/src/calibration_data_collection/launch/: lidar_camera_calibration.launch  lidar_lidar_calibration.launch
ros/livox_calibration_ws/src/calibration_data_collection/scripts/: calibration_controller_node.py
ros/livox_calibration_ws/src/calibration_data_collection/src/: integration.cpp
segmentation/: CMakeLists.txt  segmentation.cpp  segmentation.hpp  setup.py
